# alg

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile.in
include/: hperm.hpp  mat.hpp  nth_element.hpp  partition.hpp  prefix.hpp  prime.hpp  segtree.hpp
src/: par.cpp  prefix.cpp  prime.cpp
test/: binomial_test.cpp  heap_test.cpp  ilog_test.cpp  mat_test.cpp  nth_element_test.cpp  par_test.cpp  prefix_test.cpp  prime_test.cpp  segtree_test.cpp
